ANSA-400 Add HTML encoding support to field titles

--- a/src/controls/mdfbAccordian.html
+++ b/src/controls/mdfbAccordian.html
@@ -1,6 +1,6 @@
 <md-content style="margin: 10px 0px;">
 
-  <label layout="row" style="border-bottom: 1px solid #ccc; margin-bottom: 5px; padding-bottom: 5px;">{{ field.title }}</label>
+  <label layout="row" style="border-bottom: 1px solid #ccc; margin-bottom: 5px; padding-bottom: 5px;" ng-bind-html="field.title"></label>
 
   <v-accordion class="vAccordion--default" multiple>
 
