--- a/src/controls/mdfbChips.html
+++ b/src/controls/mdfbChips.html
@@ -1,5 +1,5 @@
 <md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }">
-  <label>{{field.title}}</label>
+  <label ng-bind-html="field.title"></label>
 
   <md-chips 
     name="{{field.name}}"
