--- a/src/controls/mdfbSelectSearch.html
+++ b/src/controls/mdfbSelectSearch.html
@@ -1,6 +1,6 @@
 <md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }">
 
-	<label>{{field.title}}</label>
+	<label ng-bind-html="field.title"></label>
   <md-select 
     name="{{field.name}}"
     ng-model="field.value"
