ANSA-409: Add condition to skip validation for hidden fields and/or draft form
Adds a condition to skip validation of regex, phone number and rsa id when a field is hidden or the form is being saved as a draft

--- a/src/controls/mdfbInput.html
+++ b/src/controls/mdfbInput.html
@@ -5,7 +5,7 @@
     ng-model="field.value"
     ng-disabled="field.settings.disabled || globals.viewModeOnly" 
     ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
-    regex-validation="field.settings.regexValidation" />
+    regex-validation="field.settings.regexValidation && !form.saveAsDraft.$modelValue && field.show" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
     <div ng-message="regexValidation">{{ field.settings.regexValidation.message }}</div>
