--- a/src/controls/mdfbInputPhoneNumber.html
+++ b/src/controls/mdfbInputPhoneNumber.html
@@ -5,7 +5,7 @@
     ng-model="field.value" 
     ng-disabled="field.settings.disabled" 
     ng-required="field.settings.required && field.show"
-    check-phone-number="field.settings.checkPhoneNumber" />
+    check-phone-number="field.settings.checkPhoneNumber && !form.saveAsDraft.$modelValue && field.show" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
     <div ng-message="checkPhoneNumber">Invalid Phone Number (+27812345678) or (0812345678)</div>
