ANSA-409: Update disabled and required conditions for inputID and inputPhoneNumber fields

--- a/src/controls/mdfbInputPhoneNumber.html
+++ b/src/controls/mdfbInputPhoneNumber.html
@@ -3,8 +3,8 @@
   <input 
     name="{{field.name}}"
     ng-model="field.value" 
-    ng-disabled="field.settings.disabled" 
-    ng-required="field.settings.required && field.show"
+    ng-disabled="field.settings.disabled || globals.viewModeOnly" 
+    ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
     check-phone-number="field.settings.checkPhoneNumber && !form.saveAsDraft.$modelValue && field.show" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
