ANSA-350 Add new validation to chip field
To verify that all the codes entered are valid when a transform function is set

--- a/src/controls/mdfbChips.html
+++ b/src/controls/mdfbChips.html
@@ -30,5 +30,6 @@
 
   <div ng-messages="form[field.name].$error" ng-show="form[field.name].$invalid && form[field.name].$touched">
     <div ng-message="required">This field is required</div>
+    <div ng-message="code">All codes must be valid</div>
   </div>
 </md-input-container>
