--- a/src/controls/mdfbPassword.html
+++ b/src/controls/mdfbPassword.html
@@ -8,6 +8,7 @@
     ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
+    <div ng-repeat="validation in field.validation" ng-message-exp="[validation.key]">{{validation.message}}</div>
   </div>
 </md-input-container>
 
