--- a/src/controls/mdfbInput.html
+++ b/src/controls/mdfbInput.html
@@ -9,6 +9,7 @@
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
     <div ng-message="regexValidation">{{ field.settings.regexValidation.message }}</div>
+    <div ng-repeat="validation in field.validation" ng-message-exp="[validation.key]">{{validation.message}}</div>
   </div>
 </md-input-container>
 
