--- a/src/controls/mdfbSelectSearch.html
+++ b/src/controls/mdfbSelectSearch.html
@@ -20,5 +20,6 @@
 
   <div ng-messages="form[field.name].$error" ng-show="form[field.name].$invalid && form[field.name].$touched">
     <div ng-message="required">This field is required</div>
+    <div ng-repeat="validation in field.validation" ng-message-exp="[validation.key]">{{validation.message}}</div>
   </div>
 </md-input-container>
