--- a/src/controls/mdfbTime.html
+++ b/src/controls/mdfbTime.html
@@ -7,7 +7,8 @@
     ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
     ng-pattern="'^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$'" />
   <div ng-messages="form[field.name].$error" ng-show="form[field.name].$invalid && form[field.name].$touched">
-     <div ng-message-exp="['required']">This field is required</div> 
+    <div ng-message-exp="['required']">This field is required</div> 
     <div ng-message-exp="['pattern']">Please enter a valid time (format HH:MM)</div>
+    <div ng-repeat="validation in field.validation" ng-message-exp="[validation.key]">{{validation.message}}</div>
   </div>
 </md-input-container>
