--- a/src/mdFormBuilder.html
+++ b/src/mdFormBuilder.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" data-href="mdFormBuilder.css" />
     <link rel="stylesheet" type="text/css" data-href="node_modules/mdPickers/dist/mdPickers.min.css" />
 
+    <link rel="stylesheet" type="text/css" data-href="../node_modules/lf-ng-md-file-input/dist/lf-ng-md-file-input.min.css" />
+
     <div ng-if="FormBuilder.sections.length === 0" class="loadingContainer">
       <div class="loadingDiv" style="padding: 22px;">
         <md-progress-linear md-mode="indeterminate"></md-progress-linear>
