--- a/src/mdFormBuilder.html
+++ b/src/mdFormBuilder.html
@@ -103,7 +103,7 @@
       </md-tabs>
 
       <md-input-container style="padding: 10px 15px; margin: 0px; border-top: 1px dashed #ccc" class="md-block" layout-align="center center">
-        <div layout="row" layout-sm="column" flex>
+        <div layout="row" flex>
           <div layout="row" ng-show="FormBuilder.displayType === 'tabs'">
             <md-button style="background-color: #FF8F35; padding-right: 10px;" class="md-raised md-primary" ng-if="tabs.selectedIndex > 0" ng-click="moveTabBack(tabs.selectedIndex)" type="button">
               <span><i class="material-icons ng-binding" style="font-size: 26px; margin-top: 5px; float: left;">arrow_back</i></span>
