--- a/src/controls/mdfbWebcam.html
+++ b/src/controls/mdfbWebcam.html
@@ -12,7 +12,7 @@
       text-transform: capitalize;
       margin: 0px;
       line-height: inherit;
-      margin-top: 10px;" class="md-raised md-primary" ng-click="showAdvanced()" type="button" flex-sm="100">
+      margin-top: 10px;" class="md-raised md-primary" ng-click="showAdvanced()" type="button">
       Take photo
     </md-button>
   </span>
